--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,8 +13,23 @@
       ]
     }
   },
-  "mounts": [
-    "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind"
+  "runArgs": [
+    // 1) Bind-mount the socket into the container
+    "--mount",
+    "type=bind,source=/var/run/docker.sock,target=/var/run/docker.sock"
+    // 2) (Optional) Mount the host's 'docker' binary, if you don't install it from your Dockerfile.
+    // "--mount", "type=bind,source=/usr/bin/docker,target=/usr/bin/docker",
+
+    // 3) (Optional) If you need additional privileges, enable --privileged:
+    // "--privileged"
   ],
-  "runArgs": ["--privileged"]
+
+  // ─────── Make sure the container’s "docker" group ID matches host’s GID ───────
+  //
+  // On your host, run: `ls -ln /var/run/docker.sock`
+  // Suppose that shows: `srw-rw---- 1 0 129 0 May 31 14:56 /var/run/docker.sock` with GID=129. Then set DOCKER_GROUP_ID to 129.
+  //
+  "containerEnv": {
+    "DOCKER_GROUP_ID": "129"
+  }
 }
