--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,7 +1,11 @@
 {
-  "name": "@ggpwnkthx/faas-infra",
+  "name": "@ggpwnkthx/infra-client",
   "version": "0.0.1",
   "license": "MIT",
+  "imports": {
+    "@ggpwnkthx/generic-cli": "jsr:@ggpwnkthx/generic-cli@0.1.3",
+    "@ggpwnkthx/infra-sense": "jsr:@ggpwnkthx/infra-sense@0.2.2"
+  },
   "exports": "./mod.ts",
   "fmt": {
     "useTabs": false,
