--- a/deno.jsonc
+++ b/deno.jsonc
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "license": "MIT",
   "imports": {
-    "@ggpwnkthx/generic-cli": "jsr:@ggpwnkthx/generic-cli@0.1.3",
-    "@ggpwnkthx/infra-sense": "jsr:@ggpwnkthx/infra-sense@0.2.2"
+    "@ggpwnkthx/generic-cli": "jsr:@ggpwnkthx/generic-cli@0.1.4",
+    "@ggpwnkthx/infra-sense": "jsr:@ggpwnkthx/infra-sense@0.2.3",
+    "zod": "npm:zod"
   },
   "exports": "./mod.ts",
   "fmt": {
